[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["Yurii Protsenko <elsoul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv", "tls"], version = "^4.6.1"}
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
